Update use template scripts
