# docs/swagger.json
@@ -44,7 +44,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domains.User"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/wrapper.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/domains.User"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -98,6 +110,17 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "wrapper.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "metadata": {},
+                "success": {
+                    "type": "boolean",
+                    "example": true
                 }
             }
         }
